
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/libpcanbasic/include)
include_directories(${PROJECT_SOURCE_DIR}/libaqua/include)
link_directories(${PCANBASIC_LIBDIRS})


add_subdirectory(homing)
add_subdirectory(multihoming)
add_subdirectory(free)
add_subdirectory(lock)
add_subdirectory(get_angles)
add_subdirectory(set_angles)
add_subdirectory(move_test)
add_subdirectory(foldin)
add_subdirectory(foldout)
add_subdirectory(is_homed)
add_subdirectory(waitstopped)
add_subdirectory(digital_input)
add_subdirectory(wrist_pre_home)
add_subdirectory(socketserver)
add_subdirectory(close_gripper)
add_subdirectory(open_gripper)
add_subdirectory(move_gripper)
add_subdirectory(joy_joint_ctrl)
add_subdirectory(joint_get_state)
add_subdirectory(joint_set_state)
