cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(pcanusbbasic VERSION 1.0.0)


#set(PROJECT_VERSION 1.0.0 CACHE STRING "libpcan basic API version")
#set(PROJECT_VERSION_MAJOR 1)
#set(PROJECT_VERSION_MINOR 0)
#set(PROJECT_VERSION_REVISION 0)
#set(PROJECT_VERSION_CANDIDATE 0)
set(PROJECT_DESCRIPTION "library for pcanbasic")
set(PROJECT_VENDOR "ssr")
set(PROJECT_VENDOR_CONTACT "ysuga@ssr.tokyo")
set(PROJECT_AUTHOR "ssr")
set(PROJECT_AUTHOR_SHORT "ssr")


set(PCANBASIC_LIBDIR ${CMAKE_CURRENT_SOURCE_DIR}/PCAN_Basic_API/Win32/VC_LIB)
set(PCANBASIC_LIBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/PCAN_Basic_API/Win32/VC_LIB PARENT_SCOPE)

# Subdirectories
add_subdirectory(include)
add_subdirectory(src)

install(
   EXPORT ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR}
)
