cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(pcanusbbasic VERSION 1.0.0)
set(PROJECT_DESCRIPTION "library for pcanbasic")
set(PROJECT_VENDOR "ssr")
set(PROJECT_VENDOR_CONTACT "ysuga@ssr.tokyo")
set(PROJECT_AUTHOR "ssr")
set(PROJECT_AUTHOR_SHORT "ssr")


if (WIN32)
if (${CMAKE_VS_PLATFORM_NAME} STREQUAL "Win32")
set(PCANBASIC_LIBDIR ${PCANBASIC_ROOT}/Win32/VC_LIB)
set(PCANBASIC_LIBDIRS ${PCANBASIC_ROOT}/Win32/VC_LIB PARENT_SCOPE)
elseif (${CMAKE_VS_PLATFORM_NAME} STREQUAL x64)
set(PCANBASIC_LIBDIR ${PCANBASIC_ROOT}/x64/VC_LIB)
set(PCANBASIC_LIBDIRS ${PCANBASIC_ROOT}/x64/VC_LIB PARENT_SCOPE)
else()
endif ()
endif(WIN32)
# Subdirectories
add_subdirectory(include)
add_subdirectory(src)

install(
   EXPORT ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR}
)
